Added ability to fork external project from bitbucket.org

--- a/example_project/templates/base_1col.html
+++ b/example_project/templates/base_1col.html
@@ -7,9 +7,9 @@
         <!-- One Main Panel -->
         <div id="col_single">
         {% block col-single %}
-            <div class="panel">
+            <div class="richtemplates-panel">
                 <h5>{% block col-single-title %}Single column base template{% endblock %}</h5>
-                <div class="panel-content">
+                <div class="richtemplates-panel-content">
                     {% block col-single-content %}
                     Lorem ipsum dolor ...
                     {% endblock %}
