Much work on forks; still need to fix tests

--- a/projector/templates/projector/accounts/dashboard-external-fork.html
+++ b/projector/templates/projector/accounts/dashboard-external-fork.html
@@ -21,6 +21,6 @@
         </table>
         <input type="hidden" name="{{ step_field }}" value="{{ step0 }}" />
         {{ previous_fields|safe }}
-        <input type="submit">
+        <input type="submit" name="submit" value="{% trans "Submit" %}"/>
     </form>
 {% endblock %}
