--- a/projector/templates/projector/project/create.html
+++ b/projector/templates/projector/project/create.html
@@ -11,7 +11,7 @@
 
 {% load i18n %}
 
-{% block col-main-title %}{% blocktrans %}Create new project{% endblocktrans %}{% endblock %}
+{% block col-main-title %}{% trans "Create new project" %}{% endblock %}
 
 {% block col-main-content %}
     <form action="." method="post">
