Fat change to process of project creation; docs update

--- a/projector/templates/projector/project/task/detail.html
+++ b/projector/templates/projector/project/task/detail.html
@@ -189,6 +189,7 @@
                 {% endfor %}
         
 
+        {% comment %}{# Old dynamic form #}
             {# Form begin #}
             {% if user.is_authenticated %}
             <form action="." method="post" class="action-form">
@@ -218,6 +219,7 @@
                 <a href="{% url auth_login %}">{% trans "login" %}</a>.
             </p>
             {% endif %}
+        {% endcomment %}
 
         </div>
     </div>
