Remove category from the form and template and hide vcs_alias at form

--- a/projector/templates/projector/accounts/dashboard.html
+++ b/projector/templates/projector/accounts/dashboard.html
@@ -60,7 +60,7 @@
     <h5>{% trans "Actions" %}</h5>
     <div class="richtemplates-panel-content">
 
-        <table class="action-table">
+        <table class="action-table width-80">
             <thead>
                 <tr>
                     <th>{% trans "Action" %}</th>
