--- a/projector/templates/projector/project/repository/annotate.html
+++ b/projector/templates/projector/project/repository/annotate.html
@@ -6,7 +6,7 @@
 
 {% block browse-content %}
 <div id="repo-browser">
-
+    {% block browse-content-info %}{{ block.super }}{% endblock %}
     <div class="codeblock">
         {% annotate_content root linenos=true anchorlinenos=true lineanchors=line cssclass="code-highlight" %}
     </div>
