Fixed wrong sorting anchor link at members listing page

--- a/projector/templates/projector/project/members/home.html
+++ b/projector/templates/projector/project/members/home.html
@@ -29,7 +29,7 @@
         <thead class="datatable-thead">
             <tr class="datatable-thead-subheader">
                 <th>{% anchor member "Username" %}</th>
-                <th>{% anchor created_at "Joined at" %}</th>
+                <th>{% anchor joined_at "Joined at" %}</th>
                 <th>{% trans "Permissions" %}</th>
                 <th>{% trans "Remove" %}</th>
             </tr>
