--- a/projector/templates/projector/accounts/profile.html
+++ b/projector/templates/projector/accounts/profile.html
@@ -60,13 +60,17 @@
                     <thead class="datatable-thead">
                         <tr class="datatable-thead-subheader">
                             <th>{% trans "Project" %}</th>
+                            <th>{% trans "Author" %}</th>
                             <th>{% trans "Category" %}</th>
                         </tr>
                     </thead>
                     <tbody class="datatable-tbody">
                         {% for project in project_list %}
                         <tr class="{% cycle "odd" "even" %} hoverable">
-                            <td><a class="block-link" href="{{ project.get_absolute_url }}">{{ project.name }}</a></td>
+                            <td><a href="{{ project.get_absolute_url }}"
+                                   class="block-link">{{ project.name }}</a></td>
+                            <td><a href="{% url projector_users_profile_detail project.author.username %}"
+                                   class="block-link">{{ project.author }}</a></td>
                             <td>{{ project.category|default:"-" }}</td>
                         </tr>
                         {% endfor %}
