Fixed same name at single project's admin page

--- a/projector/templates/projector/project/edit.html
+++ b/projector/templates/projector/project/edit.html
@@ -23,7 +23,7 @@
             </table>
             <div>
                 <input id="id_submit_project" type="submit" name="submit_project"
-                value="{% trans "Save" %} {% trans "project" %}"/>
+                value="{% trans "Save project" %}"/>
             </div>
         </form>
     </div>
@@ -41,7 +41,7 @@
             {% endwith %}
             <div>
                 <input id="id_submit_config" type="submit" name="submit_config"
-                value="{% trans "Save" %} {% trans "project" %}"/>
+                value="{% trans "Save config" %}"/>
             </div>
         </form>
     </div>
