--- a/projector/media/css/browser.css
+++ b/projector/media/css/browser.css
@@ -86,3 +86,12 @@ table.code-browser tbody tr:hover td { color: #000; background: #eed !important 
 	text-decoration: underline;
 }
 
+ul.changeset-changes {
+    list-style: none;
+}
+ul.changeset-changes li {
+    float: left;
+}
+ul.changeset-changes li.added {
+    background-color: lime;
+}
